added support for html post content and image uploading and serving
